# fluidsynth-1

./: CMakeLists.txt  README  configure.ac
android/: Makefile.android
android/fluidsynth-android-amidi/: ext-build.sh  fluid_android_amidi.c  fluid_android_amidi.h
android/fluidsynth-assetloader/: CMakeLists.txt
cmake_admin/: report.cmake
doc/android/: Makefile.android
doc/android/fluidsynth-android-amidi/: CMakeLists.txt  fluid_android_amidi.c  fluid_android_amidi.h
doc/android/fluidsynth-assetloader/: ext-build.sh
doc/polymono/: leg_00.txt  leg_01.txt  leg_por_00.txt  leg_por_01.txt
include/fluidsynth/: event.h  sfont.h  synth.h
src/: CMakeLists.txt  config.cmake
src/drivers/: fluid_adriver.c  fluid_android_amidi.c  fluid_mdriver.c  fluid_mdriver.h
src/midi/: fluid_midi_router.c  fluid_seqbind.c
src/sfloader/: fluid_defsfont.c  fluid_sffile.c  fluid_sfont.c  fluid_sfont.h
src/synth/: fluid_chan.c  fluid_chan.h  fluid_event.c  fluid_event.h  fluid_mod.c  fluid_synth.c  fluid_synth.h  fluid_synth_monopoly.c  fluid_voice.c  fluid_voice.h
src/utils/: fluid_sys.c  fluid_sys.h  fluidsynth_priv.h
test/: test_seq_evt_order.c
